# noir-game

./: .eslintrc.json  .gitignore  .stylelintrc.json  README.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.husky/: pre-commit  pre-push
client/: .stylelintrc.json  Dockerfile  global.d.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src/hooks/: access-control.ts  use-only-unauthorized.ts
client/src/store/: auth-slice.ts  counter-slice.ts  store.ts
client/src/styles/: _variables.module.scss  fonts.scss  index.scss  reset.module.scss
client/src/utils/: get-cookie-value.ts  is-auth.ts  manage-nickname.ts  server-api.ts
data/: characters.json
server/: .dockerignore  .pylintrc  Dockerfile  init_db.py  pyproject.toml  pytest.ini
server/server/: init_db.py  main.py
server/server/api/: __init__.py  auth.py  game.py
server/server/core/: __init__.py  authx_with_payloads.py  security.py  token_security.py
server/server/core/websocket/: auth_service.py  connection_manager.py  connections.py  game_connection_manger.py
server/server/db/: __init__.py  models.py  session.py  token_model.py  user_model.py
server/server/schemas/: __init__.py  auth.py  game.py
server/server/utils/: api.py  auth_config.py
server/tests/: conftest.py
server/tests/api/: test_auth.py
server/tests/db/: test_models.py  test_token_model.py
server/tests/utils/: test_api.py
src/app/: globals.css  layout.tsx  page.tsx
src/tests/: example.test.ts
src/types/: card-position.ts  card.ts  character.ts  move-direction.ts
src/utils/: position-to-pixels.ts  shuffle-array.ts
(+50 files in other folders)
